--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ lerna-debug.log*
 .pnpm-debug.log*
 
 .DS_Store
+output/
+tmp/
+dev/
+
 ssl/
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
